--- a/lab/lab_3.ipynb
+++ b/lab/lab_3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,8 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.feature_selection import SelectFromModel, SelectKBest, f_classif\n",
     "from sklearn.ensemble import BaggingClassifier\n",
-    "from sklearn.datasets import load_digits"
+    "from sklearn.datasets import load_digits\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -57,13 +58,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "   pixel_0  pixel_1  pixel_2  pixel_3  pixel_4  pixel_5  pixel_6  pixel_7  \\\n",
+      "0      0.0      0.0      5.0     13.0      9.0      1.0      0.0      0.0   \n",
+      "1      0.0      0.0      0.0     12.0     13.0      5.0      0.0      0.0   \n",
+      "2      0.0      0.0      0.0      4.0     15.0     12.0      0.0      0.0   \n",
+      "3      0.0      0.0      7.0     15.0     13.0      1.0      0.0      0.0   \n",
+      "4      0.0      0.0      0.0      1.0     11.0      0.0      0.0      0.0   \n",
+      "\n",
+      "   pixel_8  pixel_9  ...  pixel_54  pixel_55  pixel_56  pixel_57  pixel_58  \\\n",
+      "0      0.0      0.0  ...       0.0       0.0       0.0       0.0       6.0   \n",
+      "1      0.0      0.0  ...       0.0       0.0       0.0       0.0       0.0   \n",
+      "2      0.0      0.0  ...       5.0       0.0       0.0       0.0       0.0   \n",
+      "3      0.0      8.0  ...       9.0       0.0       0.0       0.0       7.0   \n",
+      "4      0.0      0.0  ...       0.0       0.0       0.0       0.0       0.0   \n",
+      "\n",
+      "   pixel_59  pixel_60  pixel_61  pixel_62  pixel_63  \n",
+      "0      13.0      10.0       0.0       0.0       0.0  \n",
+      "1      11.0      16.0      10.0       0.0       0.0  \n",
+      "2       3.0      11.0      16.0       9.0       0.0  \n",
+      "3      13.0      13.0       9.0       0.0       0.0  \n",
+      "4       2.0      16.0       4.0       0.0       0.0  \n",
+      "\n",
+      "[5 rows x 64 columns]\n",
+      "   label\n",
+      "0      0\n",
+      "1      1\n",
+      "2      2\n",
+      "3      3\n",
+      "4      4\n",
       "\n",
       "X_test =  (360, 64)\n",
       "Y_test =  (360,)\n",
@@ -79,6 +108,15 @@
     "\n",
     "X = data.data # features (cechy) -> używane do trenowania modelu\n",
     "y = data.target # etykiety -> wartości, które chcemy przewidzieć\n",
+    "\n",
+    "# Create a DataFrame for features\n",
+    "X_df = pd.DataFrame(X, columns=[f'pixel_{i}' for i in range(X.shape[1])])\n",
+    "\n",
+    "# Create a DataFrame for labels\n",
+    "y_df = pd.DataFrame(y, columns=['label'])\n",
+    "\n",
+    "print(X_df.head())\n",
+    "print(y_df.head())\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42) # test_size -> 80% training and 20% test\n",
     "# random_state = 42 (służy jako ziarne losowości, aby wyniki były powtarzalne), natomiast jak wartość jest ta sama za każdym razem\n",
@@ -104,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +243,7 @@
    "metadata": {},
    "source": [
     "### 2. Model kNN (model k najbliższych sąsiadów)\n",
-    "Ma za zadnie znaleźć k sąsiadów, do których klasyfikowane obiekty są najbliższe dla wybranej metryki (np. Euklidesa), a następnie określa\n",
+    "Ma za zadanie znaleźć k sąsiadów, do których klasyfikowane obiekty są najbliższe dla wybranej metryki (np. Euklidesa), a następnie określa\n",
     "wynik klasyfikacji na podstawie większości głosów tych najbliższych k sąsiadów, biorąc pod uwagę, która klasa jest reprezentowana największą liczbę razy w grupie k najbliższych sąsiadów"
    ]
   },
@@ -270,7 +308,7 @@
    "metadata": {},
    "source": [
     "### 3. Drzewo decyzyjne\n",
-    "Model drzewa decyzyjnego jest strukturą drzewa, gdzie węzły reprezentują decyzje na podstawie wartości cech, a gałęzie przedstawiają możliwe wyniki tych decyzji. Liście drzewa reprezentują klasy (w przypadku klasyfikacji) lub wartości przewidywane (w przypadku regresji).\n",
+    "Model drzewa decyzyjnego jest strukturą drzewa, gdzie węzły reprezentują decyzje na podstawie wartości cech, a gałęzie przedstawiają możliwe wyniki tych decyzji (konsekwencje). Liście drzewa reprezentują klasy (w przypadku klasyfikacji) lub wartości przewidywane (w przypadku regresji).\n",
     "\n",
     "#### Jak działa drzewo decyzyjne?\n",
     "##### Budowanie drzewa:\n",
@@ -326,11 +364,13 @@
     "model = DecisionTreeClassifier()\n",
     "param_grid = {\n",
     "    'criterion': ['gini', 'entropy'], # Kryterium oceny jakości podziału. indeks Giniego/Entropia (używa entropii do oceny czystości podziału)\n",
+    "    # indeks Giniego jest miarą nierówności rozkładu dochodów lub innych zasobów, Entropia - miarą nieuporządkowania lub niepewności w systemie\n",
     "    'max_depth': [None, 10, 20, 30], # Maksymalna głębokość drzewa, None - brak ograniczenia\n",
     "    'min_samples_split': [2, 5, 10], # Minimalna liczba próbek wymagana do podziału węzła\n",
     "    'min_samples_leaf': [1, 2, 4], # Minimalna liczba próbek wymagana w liściu węzła\n",
     "    'splitter': ['best', 'random'], # Strategia podziału węzła 'best' - najlepszy podział, 'random' - losowy podział\n",
-    "    'max_features': ['sqrt', 'log2'], # Maksymalna liczba cech branych pod uwagę przy poszukiwaniu najlepszego podziału\n",
+    "    'max_features': ['sqrt', 'log2'], # Maksymalna liczba cech branych pod uwagę przy poszukiwaniu najlepszego podziału \n",
+    "    # max_features=sqrt(n_features)\n",
     "}\n",
     "\n",
     "evaluate_model(X_train, X_test, y_train, y_test, model, param_grid, cv)"
@@ -341,12 +381,15 @@
    "metadata": {},
    "source": [
     "### 4. Regresja logistyczna\n",
-    "Algorytmem klasyfikacyjnym, który jest używany do przewidywania binarnych wyników (0 lub 1). Model ten oblicza prawdopodobieństwo przynależności próbki do określonej klasy, stosując funkcję logistyczną (sigmoidę)."
+    "Algorytmem klasyfikacyjnym, który jest używany do przewidywania binarnych wyników (0 lub 1). Model ten oblicza prawdopodobieństwo przynależności próbki do określonej klasy, stosując funkcję logistyczną (sigmoidę).\n",
+    "- opiera się na funkcji logistycznej, która przyjmuje dowolną wartość rzeczywistą i przekształca ją na zakres od 0 do 1.\n",
+    "np. sprawdzanie czy pacjent ma chorobe serca czy nie. \n",
+    "- Regularyzacja: Polega na dodaniu dodatkowej informacji do modelu, aby ograniczyć jego złożoność i poprawić zdolność generalizacji na nowych, niewidzianych wcześniej danych."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -356,43 +399,24 @@
       "\n",
       "Wyniki walidacji krzyżowej: \n",
       " [0.97569444 0.96527778 0.95121951 0.97560976 0.94076655]\n",
-      "Średni wynik walidacji krzyżowej:  0.9617136082075106\n",
-      "Najlepsze hiperparametry: {'C': 1, 'solver': 'saga'}\n",
-      "Dokładność na zbiorze testowym: 0.9722\n",
-      "Raport klasyfikacji:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       1.00      1.00      1.00        33\n",
-      "           1       0.97      1.00      0.98        28\n",
-      "           2       1.00      1.00      1.00        33\n",
-      "           3       0.97      0.97      0.97        34\n",
-      "           4       1.00      0.98      0.99        46\n",
-      "           5       0.94      0.94      0.94        47\n",
-      "           6       0.97      0.97      0.97        35\n",
-      "           7       1.00      0.97      0.99        34\n",
-      "           8       0.97      0.97      0.97        30\n",
-      "           9       0.93      0.95      0.94        40\n",
-      "\n",
-      "    accuracy                           0.97       360\n",
-      "   macro avg       0.97      0.97      0.97       360\n",
-      "weighted avg       0.97      0.97      0.97       360\n",
-      "\n",
-      "Końcowe parametry modelu:\n",
-      "{'C': 1, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 1000, 'multi_class': 'deprecated', 'n_jobs': None, 'penalty': 'l2', 'random_state': None, 'solver': 'saga', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n"
+      "Średni wynik walidacji krzyżowej:  0.9617136082075106\n"
      ]
     }
    ],
    "source": [
-    "model = LogisticRegression(max_iter=1000) # max_iter - maksymalna liczba iteracji\n",
+    "model = LogisticRegression() # max_iter - maksymalna liczba iteracji\n",
     "param_grid = {\n",
     "    'C': [0.01, 0.1, 1, 10, 100], # Odwrotność siły regularyzacji, mniejsza wartość oznacza silniejszą regularyzację\n",
     "    'solver': ['liblinear', 'saga'], # Algorytm używany do optymalizacji\n",
-    "    # 'penalty': ['l1', 'l2', 'elasticnet'], # Rodzaj regularyzacji (None - break regularyzacji)\n",
+    "    'penalty': ['l1', 'l2'], # Rodzaj regularyzacji (None - break regularyzacji)\n",
+    "    'max_iter': [100, 1000], # Maksymalna liczba iteracji\n",
+    "    'class_weight': ['balanced', 'None'] # waga klas\n",
     "}\n",
     "\n",
     "# Poprawia wydajność modeli wrażliwych na skalowanie danych\n",
     "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
+    "X_train = scaler.fit_transform(X_train) # oblicza średnią i odchylenie standardowe na zbiorze treningowym i przekształca dane treningowe\n",
+    "# tak aby miały średnią 0 i wariancję 1\n",
     "X_test = scaler.transform(X_test)\n",
     "\n",
     "evaluate_model(X_train, X_test, y_train, y_test, model, param_grid, cv)"
@@ -403,12 +427,16 @@
    "metadata": {},
    "source": [
     "### 5. Model LDA (Linear Discriminant Analysis)\n",
-    "Jest to technika stosowana w statystyce, rozpoznawaniu wzorców i uczeniu maszynowym do znajdowania liniowej kombinacji cech, która najlepiej oddziela dwie lub więcej klas."
+    "Jest to technika stosowana w statystyce, rozpoznawaniu wzorców i uczeniu maszynowym do znajdowania liniowej kombinacji cech, która najlepiej oddziela dwie lub więcej klas. LDA jest często stosowany zarówno do zmniejszania wymiarowości, jak i do klasyfikacji.\n",
+    "\n",
+    "- Regularyzacja: Polega na dodaniu dodatkowej informacji do modelu, aby ograniczyć jego złożoność i poprawić zdolność generalizacji na nowych, niewidzianych wcześniej danych.\n",
+    "\n",
+    "Metoda 'svd' (Singular Value Decomposition) używa rozkładu wartości szczególnych do znalezienia rozwiązania i nie obsługuje opcji shrinkage."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -417,8 +445,8 @@
      "text": [
       "\n",
       "Wyniki walidacji krzyżowej: \n",
-      " [0.96875    0.94444444 0.92682927 0.97909408 0.91637631]\n",
-      "Średni wynik walidacji krzyżowej:  0.9470988192024776\n",
+      " [0.96875    0.94444444 0.92682927 0.97909408 0.91986063]\n",
+      "Średni wynik walidacji krzyżowej:  0.947795683313976\n",
       "Najlepsze hiperparametry: {'shrinkage': 'auto', 'solver': 'lsqr'}\n",
       "Dokładność na zbiorze testowym: 0.9444\n",
       "Raport klasyfikacji:\n",
@@ -447,9 +475,12 @@
    "source": [
     "model = LinearDiscriminantAnalysis()\n",
     "param_grid = [\n",
-    "    {'solver': ['svd']},\n",
-    "    {'solver': ['lsqr', 'eigen'], 'shrinkage': ['auto', 0.1, 0.5, 1.0]}\n",
+    "    {'solver': ['svd']}, # Algorytm używany do rozwiązywania problemu optymalizacji\n",
+    "    {'solver': ['lsqr', 'eigen'], 'shrinkage': ['auto', 0.1, 0.5, 1.0]} \n",
     "]\n",
+    "\n",
+    "# svd - rozkład według wartości osobliwych, lsqr - minimalizacja kwadratów, eigen - rozkład według wartości własnych\n",
+    "# shrinkage - regularyzacja, auto - automatyczne reguaryzacja\n",
     "\n",
     "evaluate_model(X_train, X_test, y_train, y_test, model, param_grid, cv)"
    ]
@@ -1106,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
